[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resource/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Spawner/ingredient_spawner.gd" type="Script" id=2]
[ext_resource path="res://UI/Spawner/Ingredient Menu.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "Close"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 221, 0 ), Vector2( 279, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 285, 0 ), Vector2( 221, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 221, 0 ) ]
}

[node name="Spawner" type="Node2D"]
position = Vector2( 221, 0 )
z_index = 1
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 42.0
margin_top = 18.0
margin_right = 82.0
margin_bottom = 58.0

[node name="BoomRat" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 62.0
margin_bottom = 22.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="WitchNose" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 26.0
margin_right = 62.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="HeartPlum" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 52.0
margin_right = 62.0
margin_bottom = 74.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="UmbreallaShroom" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 78.0
margin_right = 62.0
margin_bottom = 100.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="MoldCap" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 104.0
margin_right = 62.0
margin_bottom = 126.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="SweetBerry" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 130.0
margin_right = 62.0
margin_bottom = 152.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 28.7545
margin_top = 6.0
margin_right = 40.7545
margin_bottom = 26.0
focus_mode = 0
toggle_mode = true
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="pressed" from="TextureRect/VBoxContainer/BoomRat" to="." method="_on_BoomRat_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/WitchNose" to="." method="_on_WitchNose_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HeartPlum" to="." method="_on_HeartPlum_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/UmbreallaShroom" to="." method="_on_UmbreallaShroom_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/MoldCap" to="." method="_on_MoldCap_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/SweetBerry" to="." method="_on_SweetBerry_pressed"]
[connection signal="toggled" from="TextureRect/Button" to="." method="_on_Button_toggled"]
